welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:1: error: not found: value methodeAppeleeparLecompilateur
methodeAppeleeparLecompilateur()
^Source:3: error: not found: value autreAppel
autreAppel()
^Source:23: error: not found: value encoreUneAutreAppel
encoreUneAutreAppel()
^