welcome.lessons.welcome.instructions.InstructionsDrawG.scala.code
methodeAppeleeparLecompilateur()
gauche()
autreAppel()
avance()
avance()
avance()
avance()
gauche()
avance()
avance()
avance()
avance()
gauche()
avance()
avance()
avance()
avance()
gauche()
avance()
avance()
gauche()
avance()
encoreUneAutreAppel()
